[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/radial_progress/RadialProgressBar.gd" type="Script" id=1]
[ext_resource path="res://ui/Hud.gd" type="Script" id=2]
[ext_resource path="res://textures/portraits/WATER_KAIJU_PORTRAIT_FREAKING_01.png" type="Texture" id=3]
[ext_resource path="res://textures/portraits/WATER_KAIJU_PORTRAIT_NORMAL_01.png" type="Texture" id=4]
[ext_resource path="res://textures/portraits/WATER_KAIJU_PORTRAIT_PANIC_01.png" type="Texture" id=5]
[ext_resource path="res://textures/portraits/WATER_KAIJU_PORTRAIT_HUMAN_FREAKING_01.png" type="Texture" id=6]
[ext_resource path="res://textures/portraits/WATER_KAIJU_PORTRAIT_NERVOUS_01.png" type="Texture" id=7]
[ext_resource path="res://textures/portraits/LAND_KAIJU_PORTRAIT_KAIJU_WORRIED_01.png" type="Texture" id=8]
[ext_resource path="res://textures/portraits/LAND_KAIJU_PORTRAIT_NORMAL_01.png" type="Texture" id=9]
[ext_resource path="res://textures/portraits/WATER_KAIJU_PORTRAIT_HUMAN_NERVOUS_01.png" type="Texture" id=10]
[ext_resource path="res://textures/portraits/WATER_KAIJU_PORTRAIT_HUMAN_NORMAL_01.png" type="Texture" id=11]
[ext_resource path="res://textures/portraits/WATER_KAIJU_PORTRAIT_HUMAN_PANIC_01.png" type="Texture" id=12]
[ext_resource path="res://textures/portraits/LAND_KAIJU_PORTRAIT_KAIJU_WAITING_01.png" type="Texture" id=13]
[ext_resource path="res://textures/portraits/LAND_KAIJU_PORTRAIT_KAIJU_NORMAL_01.png" type="Texture" id=14]
[ext_resource path="res://textures/portraits/LAND_KAIJU_PORTRAIT_KAIJU_MAD_01.png" type="Texture" id=15]
[ext_resource path="res://textures/alerts/alert_red.png" type="Texture" id=16]
[ext_resource path="res://textures/alerts/alert_yellow.png" type="Texture" id=17]
[ext_resource path="res://textures/alerts/alert_clear.png" type="Texture" id=18]

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GirlfriendTimer" type="Timer" parent="."]
one_shot = true

[node name="MyTransformationTimer" type="Timer" parent="."]
one_shot = true

[node name="Portraits" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "gf_mad", "gf_normal", "gf_wait", "gf_worry", "player_human_freakout", "player_human_normal", "player_human_panic", "player_human_worry", "player_kaiju_freakout", "player_kaiju_normal", "player_kaiju_panic", "player_kaiju_worry" ), [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ) ] ]

[node name="PlayerHUD" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyTransformationClock" type="Control" parent="PlayerHUD"]
margin_left = 160.0
margin_top = 160.0
margin_right = 160.0
margin_bottom = 160.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
bg_radius = 128
progress = 17
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )
bar_color = Color( 1, 0.733333, 0.356863, 1 )
angle0 = 180.0

[node name="MyPortrait" type="TextureRect" parent="PlayerHUD"]
margin_right = 320.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GirlfriendHUD" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -320.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GirlfriendClock" type="Control" parent="GirlfriendHUD"]
margin_left = 160.0
margin_top = 160.0
margin_right = 160.0
margin_bottom = 160.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
bg_radius = 128
progress = 100
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )
bar_color = Color( 0.9, 0.198, 0.2448, 1 )
angle0 = 180.0

[node name="GirlfriendPortrait" type="TextureRect" parent="GirlfriendHUD"]
margin_right = 320.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.5
margin_top = -180.0
margin_right = 114.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Alert"]
margin_right = 229.0
margin_bottom = 14.0
text = "A PASTEL ENEMY IS APPROACHING"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="Alert"]
margin_top = 18.0
margin_right = 229.0
margin_bottom = 146.0

[node name="AlertBar" type="TextureProgress" parent="Alert/CenterContainer"]
margin_left = 50.0
margin_right = 178.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource( 18 )
texture_progress = ExtResource( 17 )
fill_mode = 4
nine_patch_stretch = true

[node name="AlertRed" type="TextureRect" parent="Alert/CenterContainer"]
visible = false
margin_left = 50.0
margin_right = 178.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 16 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Alert"]
margin_top = 150.0
margin_right = 229.0
margin_bottom = 164.0
text = "IT IS IDENTIFIED AS 'MAGICAL GIRL'"
align = 1

[connection signal="timeout" from="GirlfriendTimer" to="." method="_on_GirlfriendTimer_timeout"]
[connection signal="timeout" from="MyTransformationTimer" to="." method="_on_MyTransformationTimer_timeout"]
